[gd_scene load_steps=2 format=3 uid="uid://cyw3gro3ao66a"]

[ext_resource type="Script" uid="uid://dqqy3pbtg4cnw" path="res://entities/menu/main_menu.gd" id="1_nl8w3"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_nl8w3")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="MPHostButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
action_mode = 0
text = "Host
"

[node name="MPJoinButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HostPortText" type="TextEdit" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(100, 31)
layout_mode = 2
text = "localhost
"
placeholder_text = "123	"

[node name="JoinPortText" type="TextEdit" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(100, 31)
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AIButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Against AI"

[node name="TutorialButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
action_mode = 0
text = "Tutorials"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
action_mode = 0
text = "Quit"

[node name="Label" type="Label" parent="."]
layout_mode = 2
offset_left = 232.0
offset_top = 35.0
offset_right = 370.0
offset_bottom = 58.0
scale = Vector2(1.22939, 1.75841)
text = "KING OF THE HILL"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/MPHostButton" to="." method="_on_mp_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/MPJoinButton" to="." method="_on_mp_join_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer2/AIButton" to="." method="_on_ai_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer2/TutorialButton" to="." method="_on_tutorial_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer2/QuitButton" to="." method="_on_quit_button_pressed"]
